--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,9 +8,11 @@
 #      Markdown formatted page while the second is generated using JSON.
 
 main:
+  - title: "日本語"
+    url: /japanese/
   - title: "Publications"
     url: /publications/
-
+  
   # - title: "Talks"
   #   url: /talks/    
 
@@ -23,8 +25,8 @@ main:
   # - title: "Blog Posts"
   #   url: /year-archive/
     
-  - title: "CV"
-    url: /cv/
+  # - title: "CV"
+  #   url: /cv/
     
   # - title: "CV"
   #   url: /cv-json/
