--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,10 +8,12 @@
 #      Markdown formatted page while the second is generated using JSON.
 
 main:
-  - title: "日本語"
-    url: /japanese/
-  - title: "Publications"
-    url: /publications/
+- title: "About"
+  url: /about/
+- title: "日本語"
+  url: /japanese/
+- title: "Publications"
+  url: /publications/
   
   # - title: "Talks"
   #   url: /talks/    
