--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,28 +10,30 @@
 main:
 - title: "About"
   url: /about/
+
 - title: "日本語"
   url: /japanese/
+
 - title: "Publications"
   url: /publications/
   
-  # - title: "Talks"
-  #   url: /talks/    
+# - title: "Talks"
+#   url: /talks/    
 
-  # - title: "Teaching"
-  #   url: /teaching/    
-    
-  # - title: "Portfolio"
-  #   url: /portfolio/
-        
-  # - title: "Blog Posts"
-  #   url: /year-archive/
-    
-  # - title: "CV"
-  #   url: /cv/
-    
-  # - title: "CV"
-  #   url: /cv-json/
-    
-  # - title: "Guide"
-  #   url: /markdown/
+# - title: "Teaching"
+#   url: /teaching/    
+  
+- title: "Portfolio"
+  url: /portfolio/
+      
+# - title: "Blog Posts"
+#   url: /year-archive/
+  
+# - title: "CV"
+#   url: /cv/
+  
+# - title: "CV"
+#   url: /cv-json/
+  
+# - title: "Guide"
+#   url: /markdown/
