--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ repository               : "yuya-morot0.github.io"
 author:
   # Biographic information
   avatar           : "profile.jpg"
-  name             : "Dr. Yuya Moroto"
+  name             : "Yuya Moroto"
   pronouns         : # example: "she/her"  
   bio              : "Researcher at Hitachi, Ltd."
   location         : "Tokyo, Japan"
