--- a/images/manifest.json
+++ b/images/manifest.json
@@ -2,12 +2,12 @@
 	"name": "OOjs UI icon academic-progressive",
 	"icons": [
 		{
-			"src": "/images/my_logo-192x192.png",
+			"src": "/images/mylogo-192x192.png",
 			"sizes": "192x192",
 			"type": "image/png"
 		},
 		{
-			"src": "/images/my_logo-512x512.png",
+			"src": "/images/mylogo-512x512.png",
 			"sizes": "512x512",
 			"type": "image/png"
 		}
