--- a/_config.yml
+++ b/_config.yml
@@ -148,9 +148,9 @@ social:
 
 # Analytics
 analytics:
-  provider               :  "google-universal" # false (default), "google", "google-universal", "google-analytics-4", "custom"
+  provider               :  "google-analytics-4" # false (default), "google", "google-universal", "google-analytics-4", "custom"
   google:
-    tracking_id          :
+    tracking_id          :  "https://www.googletagmanager.com/gtag/js?id=G-F4MTG2R46T"
 
 
 # Reading Files
