--- a/_config.yml
+++ b/_config.yml
@@ -151,7 +151,7 @@ social:
 analytics:
   provider               :  "google-analytics-4" # false (default), "google", "google-universal", "google-analytics-4", "custom"
   google:
-    tracking_id          :  "https://www.googletagmanager.com/gtag/js?id=G-F4MTG2R46T"
+    tracking_id          :  "G-F4MTG2R46T"
 
 
 # Reading Files
